# dotfiles

./: .bash_aliases  .bash_profile  .bashrc  .gitconfig  .gitignore  .inputrc  .screenrc  .vimrc  BUGS  Makefile.am  NEWS  README  SCHEMA  configure.ac  dbdebugfs.c  dbfs-backend.c  dbfs.c  dbfs.h  dbfsck.c  libdbfs.c  mkdbfs.c  xattr.c
.vim/: .netrwhist
.vim/after/ftplugin/: python.vim  tex.vim
.vim/ftdetect/: tex.vim  text.vim
.vim/ftplugin/: .vimrc  py.vim
CS/research/vm-papers/talks/: hornyack_generals.pptx
